# testsuit

./: .gitignore  CMakeLists.txt  Generator.cpp  Generator.h  Pair.h  README.md  Request.h  Response.cpp  Server.cpp  Server.h  architecture.txt  main.cpp  test.cpp  test.h  urlMap.json
generator/: Generator.cpp  Generator.h  Pair.h  main.cpp
implementations/: ArrayJoiner.h  Constants.cpp  Generator.cpp  Generator.h  Pair.h  Process.cpp  Process.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  StreamDescriptor.h  constants.h  helper.cpp  helpers.h
implementations/file/: FileOrString.cpp  FileOrString.h  StreamDescriptor.cpp  StreamDescriptor.h
implementations/networking/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
implementations/networking/http/: ContentDisposition.h
implementations/networking/http/request/: HttpRequest.cpp  HttpRequest.h
implementations/networking/http/response/: DescriptorResponse.cpp  DescriptorResponse.h  FileResponse.cpp  FileResponse.h  HttpResponse.h  StringResponse.h
implementations/networking/http_response/: DescriptorResponse.cpp  DescriptorResponse.h  FileResponse.cpp  FileResponse.h  HttpResponse.cpp  HttpResponse.h  StringResponse.cpp  StringResponse.h
implementations/utils/: Pair.h  Process.cpp  Process.h  UrlMapObject.h
modules/: download.py  generator  list-files.py  upload.py
server/: Server.cpp  Server.h  ServerParams.cpp  ServerParams.h
wrappers/: Request.cpp  Request.h  Response.h
